@@ -192,12 +192,12 @@ public final class GistQuery {
         .describe(params.isDescribe())
         .references(!offline && params.isReferences())
         .anyFilter(params.getRootJunction() == Junction.Type.OR)
-        .fields(getStrings(fields, FIELD_SPLIT).stream().map(Field::parse).toList())
+        .fields(getStrings(fields, FIELD_SPLIT).stream().map(Field::parse).collect(toList()))
         .filters(
             getStrings(params.getFilter(), FIELD_SPLIT).stream()
                 .map(Filter::parse)
                 .collect(toList()))
-        .orders(getStrings(order, ",").stream().map(Order::parse).toList())
+        .orders(getStrings(order, ",").stream().map(Order::parse).collect(toList()))
         .build();
   }
 
